--- a/the-network-web/pom.xml
+++ b/the-network-web/pom.xml
@@ -9,7 +9,6 @@
     
     <artifactId>the-network-web</artifactId>    
     <packaging>war</packaging>
-
     <name>the-network-web</name>
 
     <properties>
@@ -18,12 +17,20 @@
     </properties>
     
     <dependencies>
+        
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>the-network-services</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        
     </dependencies>
 
     <build>
